--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
             <div class="logo">Scarlet Certs</div>
             <ul>
                 <li>About</li>
-                <li>Products</li>
+                <li>Certs</li>
                 <li>Contact</li>
             </ul>
         </nav>
