--- a/index.html
+++ b/index.html
@@ -1,66 +1,120 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
-    <title>UNLEASHL0L</title>
-</head>
-<body>
-    <header>
-        <nav>
-            <div class="logo">Scarlet Certs</div>
-            <ul>
-                <li>About</li>
-                <li>Certs</li>
-                <li>Contact</li>
-            </ul>
-        </nav>
-    </header>
+<html>
+  <head>
+      <title>Repository</title>
+      <style>
+        @import url('https://fonts.googleapis.com/css2?family=Poppins');
+        html {
+            background-color: #101419;
+        }
+        
+        html, body {
+            height: 100%;
+            background-color: #101419;
+            font-family: 'Poppins', sans-serif;
+        }
 
-    <div class="banner">
-        <h1>Welcome to Scarlet Certs!</h1>
-        <p>We provide top-quality certification for your business needs.</p>
-        <button>Get Started</button>
+        .wrapper {
+            min-height: 100%;
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            align-items: center;
+        }
+
+
+        .services {
+            display: flex;
+            flex-wrap: wrap;
+            justify-content: center;
+            align-items: stretch;
+            background-color: #101419;
+            border-radius: 12px;
+        }
+
+        .services-container {
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            flex-direction: column;
+            text-align: center;
+        }
+
+        .service {
+            flex-basis: 30%;
+            margin: 10px;
+            padding: 20px;
+            background-color: #1f2328;
+            border-radius: 12px;
+            text-align: center;
+        }
+
+        .service:hover {
+            background-color: #94F7C5;
+            cursor: pointer;
+        }
+
+        .service:hover * {
+            color: #101419;
+        }
+
+        .service h2 {
+            margin: 10px 0;
+        }
+
+        .service p {
+            margin: 0;
+        }
+
+        .description {
+            margin-bottom: 10px;
+        }
+
+        .service a {
+            color: #dee1e6;
+            text-decoration: none;
+        }
+
+        h2 {
+            color: #dee1e6;
+            text-align: center;
+            margin-bottom: 40px;
+        }
+
+        @media screen and (max-width: 768px) {
+        .services {
+            padding: 20px;
+        }
+        
+        .service {
+            flex-basis: 100%;
+        }
+        }
+      </style>
+  </head>
+  <body>
+    <div class="wrapper">
+        <h2>Which repository?</h2>
+        <section class="services" id="services">
+            <div class="services-container">
+                <div class="services">
+                    <div class="service">
+                        <a href="https://azu0609.github.io/repo/altstore_repo.json">
+                            <img src="https://azu0609.github.io/assets/projects/repo.logo.png" alt="alt" height="128" width="128">
+                            <h2>Altstore</h2>
+                            <p class="description">Repository for Altstore, with automated update</p>
+                        </a>
+                    </div>
+                    <div class="service">
+                        <a href="https://azu0609.github.io/repo/scarlet_repo.json">
+                            <img src="https://azu0609.github.io/assets/projects/repo.logo.png" alt="alt" height="128" width="128">
+                            <h2>Scarlet</h2>
+                            <p class="description">Repository for Scarlet, with automated update</p>
+                        </a>
+                    </div>
+                </div>
+            </div>
+        </section>
     </div>
-
-    <section class="about">
-        <h2>About Us</h2>
-        <p>Scarlet Certs is a leading certification provider, offering a wide range of professional certifications to enhance your career.</p>
-        <p>Our expert instructors and comprehensive course materials ensure that you receive the highest level of training and certification in your chosen field.</p>
-    </section>
-
-    <section class="products">
-        <h2>Our Products</h2>
-        <div class="product">
-            <img src="product1.jpg" alt="Product 1">
-            <h3>Certification 1</h3>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-        </div>
-        <div class="product">
-            <img src="product2.jpg" alt="Product 2">
-            <h3>Certification 2</h3>
-            <p>Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
-        </div>
-        <div class="product">
-            <img src="product3.jpg" alt="Product 3">
-            <h3>Certification 3</h3>
-            <p>Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
-        </div>
-    </section>
-
-    <section class="contact">
-        <h2>Contact Us</h2>
-        <form>
-            <input type="text" placeholder="Name">
-            <input type="email" placeholder="Email">
-            <textarea placeholder="Message"></textarea>
-            <button>Submit</button>
-        </form>
-    </section>
-
-    <footer>
-        <p>&copy; 2021 Scarlet Certs. All rights reserved.</p>
-    </footer>
-</body>
+  </body>
 </html>
