--- a/index.html
+++ b/index.html
@@ -1,120 +1,45 @@
 <!DOCTYPE html>
 <html>
-  <head>
-      <title>Repository</title>
-      <style>
-        @import url('https://fonts.googleapis.com/css2?family=Poppins');
-        html {
-            background-color: #101419;
-        }
-        
-        html, body {
-            height: 100%;
-            background-color: #101419;
-            font-family: 'Poppins', sans-serif;
-        }
+<head>
+  <title>My Repository</title>
+  <style>
+    body {
+      background-color: black;
+      color: white;
+    }
 
-        .wrapper {
-            min-height: 100%;
-            display: flex;
-            flex-direction: column;
-            justify-content: center;
-            align-items: center;
-        }
+    h1 {
+      font-size: 48px;
+      font-weight: bold;
+    }
 
+    .image-button {
+      width: 200px;
+      height: 200px;
+      display: inline-block;
+    }
 
-        .services {
-            display: flex;
-            flex-wrap: wrap;
-            justify-content: center;
-            align-items: stretch;
-            background-color: #101419;
-            border-radius: 12px;
-        }
-
-        .services-container {
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            flex-direction: column;
-            text-align: center;
-        }
-
-        .service {
-            flex-basis: 30%;
-            margin: 10px;
-            padding: 20px;
-            background-color: #1f2328;
-            border-radius: 12px;
-            text-align: center;
-        }
-
-        .service:hover {
-            background-color: #94F7C5;
-            cursor: pointer;
-        }
-
-        .service:hover * {
-            color: #101419;
-        }
-
-        .service h2 {
-            margin: 10px 0;
-        }
-
-        .service p {
-            margin: 0;
-        }
-
-        .description {
-            margin-bottom: 10px;
-        }
-
-        .service a {
-            color: #dee1e6;
-            text-decoration: none;
-        }
-
-        h2 {
-            color: #dee1e6;
-            text-align: center;
-            margin-bottom: 40px;
-        }
-
-        @media screen and (max-width: 768px) {
-        .services {
-            padding: 20px;
-        }
-        
-        .service {
-            flex-basis: 100%;
-        }
-        }
-      </style>
-  </head>
-  <body>
-    <div class="wrapper">
-        <h2>Which repository?</h2>
-        <section class="services" id="services">
-            <div class="services-container">
-                <div class="services">
-                    <div class="service">
-                        <a href="https://azu0609.github.io/repo/altstore_repo.json">
-                            <img src="https://azu0609.github.io/assets/projects/repo.logo.png" alt="alt" height="128" width="128">
-                            <h2>Altstore</h2>
-                            <p class="description">Repository for Altstore, with automated update</p>
-                        </a>
-                    </div>
-                    <div class="service">
-                        <a href="https://azu0609.github.io/repo/scarlet_repo.json">
-                            <img src="https://azu0609.github.io/assets/projects/repo.logo.png" alt="alt" height="128" width="128">
-                            <h2>Scarlet</h2>
-                            <p class="description">Repository for Scarlet, with automated update</p>
-                        </a>
-                    </div>
-                </div>
-            </div>
-        </section>
+    .image-button img {
+      width: 100%;
+      height: 100%;
+      cursor: pointer;
+    }
+  </style>
+</head>
+<body>
+  <h1>My Repository</h1>
+  <div id="button-container">
+    <div class="image-button">
+      <a href="https://example.com/repository1">
+        <img src="button1.png" alt="Button 1" />
+      </a>
     </div>
-  </body>
+    <div class="image-button">
+      <a href="https://example.com/repository2">
+        <img src="button2.png" alt="Button 2" />
+      </a>
+    </div>
+  </div>
+  <p>Click on either button to go to the corresponding repository!</p>
+</body>
 </html>
