--- a/index.html
+++ b/index.html
@@ -31,12 +31,12 @@
   <div id="button-container">
     <div class="image-button">
       <a href="https://example.com/repository1">
-        <img src="button1.png" alt="Button 1" />
+        <img src="https://azu0609.github.io/assets/projects/repo.logo.png" />
       </a>
     </div>
     <div class="image-button">
-      <a href="https://example.com/repository2">
-        <img src="button2.png" alt="Button 2" />
+      <a href="https://usescarlet.com">
+        <img src="https://azu0609.github.io/assets/projects/repo.logo.png" alt="Button 2" />
       </a>
     </div>
   </div>
