--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
       </a>
     </div>
     <div class="image-button">
-      <a href="https://usescarlet.com">
+      <a href="https://usescarlett.carrd.co/">
         <img src="https://azu0609.github.io/assets/projects/repo.logo.png" alt="Button 2" />
       </a>
     </div>
