--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>My Repository</title>
+  <title>Sideloads</title>
   <style>
     body {
       background-color: black;
@@ -27,7 +27,7 @@
   </style>
 </head>
 <body>
-  <h1>My Repository</h1>
+  <h1>Sideloadlys</h1>
   <div id="button-container">
     <div class="image-button">
       <a href="https://example.com/repository1">
